--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <header>
         <title>Resume</title>
     </header>
-    <body bgcolor=#dddde0>
+    <body bgcolor="white">
 
 <meta charset=“UTF-8”>
 <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic' rel='stylesheet' type='text/css'>
