--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p>Bangalore, India</p>
           <p>=560061</p>
         </div>
-        <a href="mailto:jlalovi@gmail.com" class="send_message_button">
+        <a href="mailto:anikethbhargav05@gmail.com" class="send_message_button">
           <span class="cut1"></span>
           <span class="cut2"></span>
           <span class="content">Send me a message <span class="fontawesome-double-angle-right"></span></span>
